--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Wild Hackers Code Arena</title>
+  <title>Bachelor of technology 3 year - CSE - important algorithms </title>
   <style>
     body {
       background: #000;
@@ -162,3 +162,4 @@
 
 </body>
 </html>
+
