--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <h1>⚔️ Wild Hackers Code Arena</h1>
 
   <!-- CHAPTER 1 -->
-  <h2>Chapter 1: cry</h2>
+  <h2>Chapter 1: Cryptography and network security </h2>
   <div class="grid">
     <div class="slot"><a href="s1.html" target="_blank">caesar cipher</a></div>
     <div class="slot"><a href="s2.html" target="_blank">playfair</a></div>
@@ -83,7 +83,7 @@
   </div>
 
   <!-- CHAPTER 2 -->
-  <h2>Chapter 2: made</h2>
+  <h2>Chapter 2: Mobile Application Development </h2>
   <div class="grid">
     <div class="slot"><a href="s13.html" target="_blank">helloworld</a></div>
     <div class="slot"><a href="s14.html" target="_blank">gui (hello world)</a></div>
@@ -100,7 +100,7 @@
   </div>
 
   <!-- CHAPTER 3 -->
-  <h2>Chapter 3: mla</h2>
+  <h2>Chapter 3: Machine Learning and Applications </h2>
   <div class="grid">
     <div class="slot"><a href="s25.html" target="_blank">email spam</a></div>
     <div class="slot"><a href="s26.html" target="_blank">imge classification using svm</a></div>
@@ -117,7 +117,7 @@
   </div>
 
   <!-- CHAPTER 4 -->
-  <h2>Chapter 4: iot</h2>
+  <h2>Chapter 4: Internet of Things </h2>
   <div class="grid">
     <div class="slot"><a href="s37.html" target="_blank">slot 37</a></div>
     <div class="slot"><a href="s38.html" target="_blank">blink led</a></div>
@@ -134,7 +134,7 @@
   </div>
 
   <!-- CHAPTER 5 -->
-  <h2>Chapter 5: Advanced</h2>
+  <h2>Chapter 5: Other empty solots </h2>
   <div class="grid">
     <div class="slot"><a href="s49.html" target="_blank">Slot 49</a></div>
     <div class="slot"><a href="s50.html" target="_blank">Slot 50</a></div>
@@ -162,4 +162,5 @@
 
 </body>
 </html>
+
 
