--- a/spdfs.html
+++ b/spdfs.html
@@ -61,7 +61,7 @@
 
   <div class="pdf-grid">
     <div class="pdf-item"><a href="MAD.pdf" target="_blank" download>PDF 1: MAD</a></div>
-    <div class="pdf-item"><a href="pdfs/basics.pdf" target="_blank" download>PDF 2: Basics</a></div>
+    <div class="pdf-item"><a href="DRA_LAB.pdf" target="_blank" download>PDF DRA_LAB</a></div>
     <div class="pdf-item"><a href="pdfs/html.pdf" target="_blank" download>PDF 3: HTML</a></div>
     <div class="pdf-item"><a href="pdfs/css.pdf" target="_blank" download>PDF 4: CSS</a></div>
     <div class="pdf-item"><a href="pdfs/javascript.pdf" target="_blank" download>PDF 5: JavaScript</a></div>
@@ -84,3 +84,4 @@
 
 </body>
 </html>
+
